2005-02-20  Sven Neumann  <sven@gimp.org>

	Merged from HEAD:

	* app/dialogs/user-install-dialog.c
	* app/core/gimp-templates.[ch] (gimp_templates_migrate): if
	migrating templaterc from ~/.gimp-2.0, do a case-insensitive match
	on template names to accommodate for the fact that we changed the
	spelling of some default templates between 2.0 and 2.2.

2005-02-19  Michael Natterer  <mitch@gimp.org>

	Merged from HEAD:

	* app/tools/gimptexttool.c (gimp_text_tool_create_layer): block
	the "active-layer-changed" callback while anchoring the floating
	selection so the callback doesn't reset the text tool in the
	middle of adding a new text layer. Fixes bug #166829.

2005-02-18  Sven Neumann  <sven@gimp.org>

	Merged from HEAD:

	* plug-ins/common/mng.c (mng_save_image): write a DEFI chunk to
	set the frame offset if the layer offsets are != 0, not only if
	they are > 0. Fixes bug #166059.

2005-02-18  Sven Neumann  <sven@gimp.org>

	Merged from HEAD:

	* app/display/gimpstatusbar.c: unset the CAN_FOCUS flag on the
	combo boxes and the cancel button. Set "focus-on-click" to FALSE
	for the combo boxes. Fixes bug #167809.

2005-02-18  Alexander Shopov  <ash@contact.bg>

	* configure.in: Added "bg" (Bulgarian) to ALL_LINGUAS

2005-02-17  Sven Neumann  <sven@gimp.org>

	Merged from HEAD:

	* app/widgets/gimpviewrenderergradient.c
	(gimp_view_renderer_gradient_render): don't attempt to read beyond
	the pre-calculated render buffers, even if the gradient somehow
	has out-of-bounds values. Fixes the crash reported in bug #167604.

2005-02-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/siod-wrapper.c: reverted the last change
	since it changes the script API. Such a change must not be done in
	the stable branch.

2005-02-16  Kevin Cozens  <kcozens@cvs.gimp.org>

	* plug-ins/script-fu/siod-wrapper.c: Added constants
	MIN-IMAGE-SIZE, MAX-IMAGE-SIZE, MIN-RESOLUTION, and MAX-RESOLUTION
	for use in Script-Fu scripts. See comment #4 in bug #167529.
